[package]
name = "test_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"

[build-dependencies]
tonic-build = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

